# rucksack

./: .gitignore  Cargo.toml  Makefile  README.md  config.toml  deny.toml
.github/workflows/: cicd.yml
rucksack/: Cargo.toml  README.md
rucksack-db/: Cargo.toml  README.md
rucksack-db/src/: crypto.rs  lib.rs
rucksack-db/src/csv/: chrome.rs  firefox.rs  mod.rs  reader.rs
rucksack-db/src/db/: backup.rs  encrypted.rs  manager.rs  mod.rs  old.rs  store.rs  versioned.rs
rucksack-db/src/records/: mod.rs  shared.rs  v020.rs  v030.rs  v040.rs  v050.rs  v060.rs  v070.rs  v080.rs  v090.rs
rucksack-db/src/store/: manager.rs  mod.rs
rucksack-db/src/store/backend/: backup.rs  filesystem.rs  mod.rs  persy.rs  redb.rs
rucksack-db/src/testing/: data.rs  db.rs
rucksack-lib/: Cargo.toml  README.md
rucksack-lib/src/: file.rs  lib.rs  time.rs  util.rs
rucksack-lib/src/config/: init.rs  loader.rs  schema.rs
rucksack-lib/src/generator/: password.rs
rucksack/src/: app.rs  constant.rs  daemon.rs  lib.rs  main.rs  option.rs  query.rs  setup.rs
rucksack/src/cli/command/: export.rs  gen.rs  mod.rs  rm.rs  util.rs
rucksack/src/command/: add.rs  backup.rs  completions.rs  config.rs  dispatch.rs  export.rs  import.rs  list.rs  mod.rs  rm.rs  set.rs  setup.rs  show.rs
rucksack/src/command/arg/: db.rs  record.rs
rucksack/src/command/args/: db.rs  dedupe.rs  mod.rs  record.rs  top.rs
rucksack/src/command/handlers/: add.rs  backup.rs  completions.rs  config.rs  dedupe.rs  delete.rs  gen.rs  list.rs  mod.rs  set.rs  show.rs
rucksack/src/command/output/: column.rs  formatter.rs  mod.rs  option.rs  result.rs  table.rs
rucksack/src/handlers/: backup.rs  config.rs  help.rs  list.rs  mod.rs  version.rs
rucksack/src/input/: config.rs  constant.rs  mod.rs  model.rs  options.rs  query.rs
rucksack/src/input/config/: init.rs
rucksack/src/input/testing/: configs.rs
rucksack/src/output/: column.rs  mod.rs  option.rs  result.rs  table.rs
rucksack/src/service/: actor.rs  mod.rs  protocol.rs
src/: app.rs  lib.rs  main.rs  time.rs  util.rs
src/cli/: command.rs
src/cli/command/: add.rs  arg.rs  export.rs  gen.rs  import.rs  list.rs  mod.rs  prompt.rs  rm.rs  set.rs  show.rs  update.rs  util.rs
src/config/: init.rs  loader.rs  mod.rs  schema.rs
src/csv/: chrome.rs  firefox.rs  mod.rs  reader.rs  writer.rs
src/generator/: mod.rs  password.rs  uuid.rs
src/import/: chrome.rs  csv.rs  firefox.rs  mod.rs  shared.rs
src/store/: crypto.rs  db.rs  mod.rs  record.rs  testing_data.rs
src/store/db/: backup.rs  encrypted.rs  mod.rs  old.rs  versioned.rs
src/store/records/: mod.rs  shared.rs  v020.rs  v030.rs  v040.rs  v050.rs  v060.rs  v070.rs
src/testing/: data.rs
tests/: common.sh  old_db_formats.sh  rucksack.sh  rucksack_dev.sh  rucksack_local.sh
tests/testing-data/: sample-export-chrome.csv  sample-export-firefox.csv  secrets-v0.5.0.db  secrets-v0.6.0.db  secrets-v0.7.0.db
