[package]
name = "rucksack"
description = "A terminal-based password manager, importer (Firefox Sync), and generator"
version = "0.1.0-dev"
license = "Apache-2.0"
authors = ["Duncan McGreggor <oubiwann@gmail.com>"]
repository = "https://github.com/oxur/rucksack"
documentation = "https://docs.rs/rucksack/"
categories = ["command-line-interface"]
keywords = ["password-manager", "terminal"]
exclude = ["/.github", "/resources", ".gitignore"]
edition = "2021"

[lib]
name = "rucksack"

[dependencies]
anyhow = "1.0"
chacha20poly1305 = { version = "0.10.1", features = ["stream"] }
clap = "4.0.32"
confyg = "0.1.3"
rand = "0.8"
secrecy = "0.8.0"
surrealdb = "1.0.0-beta.8"
tui = "0.19.0"
