[package]
name = "rucksack"
description = "A terminal-based password manager, generator, and importer (Firefox, Chrome) backed with a concurrent hashmap"
version = "0.6.0-dev"
license = "Apache-2.0"
authors = ["Duncan McGreggor <oubiwann@gmail.com>"]
repository = "https://github.com/oxur/rucksack"
documentation = "https://docs.rs/rucksack/"
categories = ["command-line-interface"]
keywords = ["password-manager", "terminal"]
exclude = ["/.github", "/resources", ".gitignore"]
edition = "2021"

[lib]
name = "rucksack"

[dependencies]
aead = "0.5.1"
aes-gcm = "0.10.1"
anyhow = "1.0"
base64 = "0.21"
bincode = { version = "2.0.0-rc.2", features = ["serde"] }
chrono = "0.4.23"
clap = { version = "4.0.32", features = ["string"] }
clap_complete = "4.0"
confyg = "0.1.3"
crc32fast = "1.3.2"
csv = "1.1.6"
dashmap = { version = "5.4.0", features = ["serde"] }
lipsum = "0.8.2"
log = "0.4.17"
passwords = "3.1.12"
rand = "0.8"
rpassword = "7.1"
secrecy = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
shellexpand = "3.0.0"
twyg = "0.1.10"
url = "2.3.1"
uuid = {version = "1.2.2",  features = ["v4"]}

[dev-dependencies]
tempfile = "3"
