[package]
name = "rucksack"
description = "A terminal-based password manager, generator, and importer/exporter (Firefox, Chrome) backed with a concurrent hashmap"
version = "0.8.0-dev"
license = "Apache-2.0"
authors = ["Duncan McGreggor <oubiwann@gmail.com>"]
repository = "https://github.com/oxur/rucksack"
documentation = "https://docs.rs/rucksack/"
categories = ["command-line-interface"]
keywords = ["password-manager", "terminal"]
exclude = ["/.github", "/resources", ".gitignore"]
edition = "2021"

[lib]
name = "rucksack"

[dependencies]
aead = "0.5"
aes-gcm = "0.10"
anyhow = "1.0"
base64 = "0.21"
bincode = "2.0.0-rc.2"
chrono = "0.4"
clap = { version = "4.0", features = ["string"] }
clap_complete = "4.0"
confyg = "0.1"
crc32fast = "1.3"
csv = "1.1"
dashmap = { version = "5.4.0", features = ["serde"] }
dirs = "4.0.0"
enum-iterator = "1.2.0"
heck = "0.4.1"
lipsum = "0.8"
log = "0.4"
passwords = "3.1"
path-clean = "0.1.0"
rand = "0.8"
rpassword = "7.1"
secrecy = "0.8"
serde = { version = "1.0", features = ["derive"] }
shellexpand = "3.0.0"
twyg = "0.1"
url = "2.3"
uuid = {version = "1.2",  features = ["v4"]}
versions = "4.1.0"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "rucksack"
