[package]
name = "rucksack-db"
description = "The rucksack encrypted database"
version = "0.9.0"
license = "Apache-2.0"
authors = ["Duncan McGreggor <oubiwann@gmail.com>"]
repository = "https://github.com/oxur/rucksack"
documentation = "https://docs.rs/rucksack-db/"
categories = ["database-implementations"]
keywords = ["password-manager", "terminal"]
exclude = ["/.github", "/resources", ".gitignore"]
edition = "2021"

[lib]
name = "rucksack_db"

[dependencies]
aead = "0.5"
aes-gcm = "0.10"
anyhow = "1.0"
bincode = "2.0.0-rc.2"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
crc32fast = "1.3"
csv = "1.1"
dashmap = { version = "5.4.0", features = ["serde"] }
enum-iterator = "1.2.0"
heck = "0.4.1"
log = "0.4"
rand = "0.8"
secrecy = "0.8"
serde = { version = "1.0", features = ["derive"] }
time = "0.3"
url = "2.3"
uuid = {version = "1.2",  features = ["v4"]}
versions = "4.1.0"

[dev-dependencies]
tempfile = { version = "3", default-features = false}

[dependencies.rucksack-lib]
path = "../rucksack-lib"
version = "0.8.2"
