[package]
name = "rucksack-db"
description = "The rucksack encrypted database"
version = "0.10.2"
license = "Apache-2.0"
authors = ["Duncan McGreggor <oubiwann@gmail.com>"]
repository = "https://github.com/oxur/rucksack"
documentation = "https://docs.rs/rucksack-db/"
categories = ["database-implementations"]
keywords = ["password-manager", "terminal"]
exclude = ["/.github", "/resources", ".gitignore"]
edition = "2021"

[lib]
name = "rucksack_db"

[features]
dashmap = ["dep:dashmap"]
persy = ["dep:persy"]
redb = ["dep:redb"]

[dependencies]
aead = "0.5"
aes-gcm = "0.10"
anyhow = "1.0"
bincode = "2.0.0-rc.2"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
crc32fast = "1.3"
csv = "1.1"
dashmap = { version = "5.4.0", features = ["serde"], optional = true }
enum-iterator = "1.2.0"
heck = "0.4.1"
log = "0.4"
persy = { version = "1.4", optional = true }
rand = "0.8"
redb = { version = "0.13", optional = true }
secrecy = "0.8"
serde = { version = "1.0", features = ["derive"] }
tempfile = { version = "3", default-features = false}
url = "2.3"
uuid = {version = "1.2",  features = ["v4"]}
versions = "4.1.0"

[dependencies.rucksack-lib]
path = "../rucksack-lib"
version = "0.9.0"
