[package]
name = "rucksack-lib"
description = "The rucksack core library"
version = "0.9.0"
license = "Apache-2.0"
authors = ["Duncan McGreggor <oubiwann@gmail.com>"]
repository = "https://github.com/oxur/rucksack"
documentation = "https://docs.rs/rucksack-lib/"
keywords = ["password-manager", "terminal"]
exclude = ["/.github", "/resources", ".gitignore"]
edition = "2021"

[lib]
name = "rucksack_lib"

[dependencies]
anyhow = "1.0"
base64 = "0.21"
bincode = "2.0.0-rc.2"
chrono = "0.4"
confyg = "0.1"
dirs = "4.0.0"
lipsum = "0.8"
log = "0.4"
passwords = "3.1"
path-clean = "0.1.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
shellexpand = "3.0.0"
twyg = "0.1"
unix_mode = "0.1"
uuid = {version = "1.2",  features = ["v4"]}
versions = "4.1.0"

[dev-dependencies]
tempfile = "3"
