[package]
name = "rucksack-lib"
description = "The rucksack core library"
version = "0.8.2.1"
license = "Apache-2.0"
authors = ["Duncan McGreggor <oubiwann@gmail.com>"]
repository = "https://github.com/oxur/rucksack"
documentation = "https://docs.rs/rucksack-lib/"
keywords = ["password-manager", "terminal"]
exclude = ["/.github", "/resources", ".gitignore"]
edition = "2021"

[lib]
name = "rucksack_lib"

[dependencies]
anyhow = "1.0"
base64 = "0.21"
bincode = "2.0.0-rc.3"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
confyg = "0.2.0"
dirs = "5.0.1"
lipsum = "0.9.0"
log = "0.4"
passwords = "3.1"
path-clean = "1.0.1"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
shellexpand = "3.0.0"
time = "0.3"
twyg = "0.2.0"
uuid = { version = "1.2", features = ["v4"] }
versions = "6.0.0"

[dev-dependencies]
tempfile = { version = "3", default-features = false }
