[package]
name = "rucksack"
description = "A terminal-based password manager, generator, and importer/exporter (Firefox, Chrome) backed with a concurrent hashmap"
version = "0.8.0-dev"
license = "Apache-2.0"
authors = ["Duncan McGreggor <oubiwann@gmail.com>"]
repository = "https://github.com/oxur/rucksack"
documentation = "https://docs.rs/rucksack/"
categories = ["command-line-interface"]
keywords = ["password-manager", "terminal"]
exclude = ["/.github", "/resources", ".gitignore"]
edition = "2021"

[lib]
name = "rucksack"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["string"] }
clap_complete = "4.0"
log = "0.4"
passwords = "3.1"
rpassword = "7.1"
secrecy = "0.8"
twyg = "0.1"
versions = "4.1.0"

[dependencies.rucksack-db]
path = "../rucksack-db"
version = "0.8.0-rc1"

[dependencies.rucksack-lib]
path = "../rucksack-lib"
version = "0.8.0-rc1"

[dev-dependencies]

[[bin]]
name = "rucksack"
